# census-api-rust

./: .gitignore  Cargo.toml
examples/: scan-achiement-ids.rs
src/: lib.rs  utils.rs
src/events/: mod.rs
src/events/api_command/: mod.rs
src/events/api_events/: event_types.rs  mod.rs  parse_helpers.rs
src/rest/: achievement.rs  census_value.rs  character.rs  item.rs  mod.rs  outfit.rs  query_builder.rs
src/rest/api/: character.rs  mod.rs
src/shared/: worlds.rs
