[package]
name = "ps2api"
version = "0.1.0"
edition = "2021"

[profile.dev]
# Minimize optimizations for dev builds
opt-level = 0

# In dev builds Maximize optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
tokio-stream = "0.1.9"
tokio = { version = "1.20.1", features = ["full"] }
futures-util = { version = "0.3.23" }
http = "0.2.8"
reqwest = { version = "0.11.11" }
tokio-tungstenite = { version = "0.17.2", features = ["rustls-tls-webpki-roots", "connect"] }
rustls = { version = "0.20.0" }
webpki-roots = { version = "0.22.5" }
serde_json = { version = "1.0.85" }
serde = { version = "1.0.144", features = ["derive"] }
native-tls = "0.2.10"
async-recursion = "1.0.0"
num-traits = "0.2.15"